added lecture notes from time away

--- a/3100f23.html
+++ b/3100f23.html
@@ -153,6 +153,8 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/22-27</span><span class="course-task col-md-10"> See these (rough!) <a href="3100f23/lecturenotes.pdf">lecture notes</a>.
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/20</span><span class="course-task col-md-10"> All Cauchy sequences converge. 
                                                         Definition of the least upper bound. Statement of the Least Upper Bound Property of the real numbers: Every nonempty subset of $\mathbb{R}$ that is bounded above has a least upper bound. Sketch of a proof that $\sqrt{2}$ exists  in the real numbers based on the Least Upper Bound Property.
                                                     </span></li>
