--- a/3100f23.html
+++ b/3100f23.html
@@ -153,6 +153,8 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/29</span><span class="course-task col-md-10"> Precise definition of convergence. First examples of series. Convergence of $\sum 1/k^2$ and divergence of $\sum 1/k$. Statement of $k$th term divergence test.
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/22-27</span><span class="course-task col-md-10"> See these (rough!) <a href="3100f23/lecturenotes.pdf">lecture notes</a>.
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/20</span><span class="course-task col-md-10"> All Cauchy sequences converge. 
