--- a/3100f23.html
+++ b/3100f23.html
@@ -123,7 +123,7 @@
                                                 <ul class="assignment-list">
 
 
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4</span><span class="col-md-2 due-date">due date TBA</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4</span><span class="col-md-2 due-date">due 10/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 review sheet/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
