--- a/3100f23.html
+++ b/3100f23.html
@@ -122,7 +122,8 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
 
-
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #5</span><span class="col-md-2 due-date">due 10/11</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4</span><span class="col-md-2 due-date">due 10/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
@@ -153,6 +154,11 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/4</span><span class="course-task col-md-10"> Eventual comparison test. Limit comparison test.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/2</span><span class="course-task col-md-10"> Proof of $k$th term divergence test. Geometric series. Nonnegative series and the basic comparison test.
                                                     </span></li>
 
