--- a/3100f23.html
+++ b/3100f23.html
@@ -257,7 +257,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                                 <p>There are three in-class midterm exams as well as a final exam.</p>
                                                 <ul>
                                                     <li class="with-bullet">Midterm #1: Friday, September 15</li>
-                                                    <li class="with-bullet">Midterm #2: Friday, October 13</li>
+                                                    <li class="with-bullet">Midterm #2: <del>Friday, October 13</del> Monday, October 16</li>
                                                     <li class="with-bullet">Midterm #3: Monday, November 20</li>
                                                     <li class="with-bullet">Final exam: Wed, December 13, 12:00-3 PM (location TBA)</li>
                                                 </ul>
