--- a/8440f23.html
+++ b/8440f23.html
@@ -126,6 +126,7 @@
                                             <div class="module-content col-sm-9">
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">10/6</span><span class="course-task col-md-10">Start of discussion of Schnirelmann's theorem. Selberg's upper bound sieve.</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">10/4</span><span class="course-task col-md-10">Wrap up of Artin's primitive root conjecture, wrap up of Erdős--Wintner</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">10/2</span><span class="course-task col-md-10">Artin's primitive root conjecture, ctd.</span></li>
 													<li class="with-bullet"><span class="course-date col-sm-1">9/29</span><span class="course-task col-md-10">Erdős--Wintner theorem, ctd.</span></li>
