--- a/3100f23.html
+++ b/3100f23.html
@@ -154,6 +154,8 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/6</span><span class="course-task col-md-10"> Examples of the limit comparison test. $p$-test. Statement of integral test and start of its proof.
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/4</span><span class="course-task col-md-10"> Eventual comparison test. Limit comparison test.
                                                     </span></li>
