--- a/3100f23.html
+++ b/3100f23.html
@@ -154,6 +154,9 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/9</span><span class="course-task col-md-10"> Conclusion of proof of the integral test. Examples. Definition of absolute convergence.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/6</span><span class="course-task col-md-10"> Examples of the limit comparison test. $p$-test. Statement of integral test and start of its proof.
                                                     </span></li>
 
