--- a/3100f23.html
+++ b/3100f23.html
@@ -155,6 +155,10 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/11</span><span class="course-task col-md-10"> Absolute convergence implies convergence. Alternating series test. Conditional convergence.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/9</span><span class="course-task col-md-10"> Conclusion of proof of the integral test. Examples. Definition of absolute convergence.
                                                     </span></li>
 
