--- a/8440f23.html
+++ b/8440f23.html
@@ -126,6 +126,11 @@
                                             <div class="module-content col-sm-9">
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">10/11</span><span class="course-task col-md-10">
+                                                        Practical numbers  (asymptotics).
+                                                        </span></li>
+                                                                                                             
                                                         <li class="with-bullet"><span class="course-date col-sm-1">10/9</span><span class="course-task col-md-10">The idea of computational complexity and the Fast Fourier Transform.</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">10/6</span><span class="course-task col-md-10">Start of discussion of Schnirelmann's theorem. Selberg's upper bound sieve.</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">10/4</span><span class="course-task col-md-10">Wrap up of Artin's primitive root conjecture, wrap up of Erdős--Wintner</span></li>
