--- a/research.html
+++ b/research.html
@@ -2764,6 +2764,30 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     </div>
                 </li>   
 
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Densities of integer sets represented by quadratic forms</span>  <span class="paper-author">(w/ P.L. Clark, J. Rouse, and K. Thompson)</span>          </h4>
+                        <p>
+                            <a href="https://www.sciencedirect.com/journal/journal-of-number-theory/issues"><span class="journal-name">J. Number Theory</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/CPRT.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper140" aria-expanded="false" aria-controls="paper140">Abstract</a>
+                            <div class="collapse" id="paper140">
+                                <div class="well paper-abtract-content">
+                                    <p> Let $f(t_1,\dots, t_n)$ be a nondegenerate integral quadratic form. We analyze the asymptotic
+                                        behavior of the function $D_f(X)$, the number of integers of absolute value up to $X$ represented by
+                                        $f$. When $f$ is isotropic or $n$ is at least 3, we show that there is a $\delta(f) \in \mathbb{Q}\cap (0,1)$ such that $D_f(X) \sim \delta(f) X$ and call $\delta(f)$ the <b>density</b> of $f$. We consider the inverse problem of which densities arise. 
+                                        arise. Our main technical tool is a <b>Near Hasse Principle</b>: a quadratic form may fail to represent infinitely many integers that it locally represents, but this set of exceptions has density $0$ within the
+                                        set of locally represented integers.</p>
+
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li>   
+
+
 
 
 
@@ -2785,13 +2809,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                     </li>
                                                 
 
-                                                                              <li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">Densities of integer sets represented by quadratic forms</span>
-        <span class="paper-author">(w/ P.L. Clark, J. Rouse, and K. Thompson)</span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/CPRT.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>        
+                                                                          
 
 <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
