--- a/research.html
+++ b/research.html
@@ -2777,8 +2777,8 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                 <div class="well paper-abtract-content">
                                     <p> Let $f(t_1,\dots, t_n)$ be a nondegenerate integral quadratic form. We analyze the asymptotic
                                         behavior of the function $D_f(X)$, the number of integers of absolute value up to $X$ represented by
-                                        $f$. When $f$ is isotropic or $n$ is at least 3, we show that there is a $\delta(f) \in \mathbb{Q}\cap (0,1)$ such that $D_f(X) \sim \delta(f) X$ and call $\delta(f)$ the <b>density</b> of $f$. We consider the inverse problem of which densities arise. 
-                                        arise. Our main technical tool is a <b>Near Hasse Principle</b>: a quadratic form may fail to represent infinitely many integers that it locally represents, but this set of exceptions has density $0$ within the
+                                        $f$. When $f$ is isotropic or $n$ is at least 3, we show that there is a $\delta(f) \in \mathbb{Q}\cap (0,1)$ such that $D_f(X) \sim \delta(f) X$ and call $\delta(f)$ the <i>density</i> of $f$. We consider the inverse problem of which densities arise. 
+                                        arise. Our main technical tool is a <i>Near Hasse Principle</i>: a quadratic form may fail to represent infinitely many integers that it locally represents, but this set of exceptions has density $0$ within the
                                         set of locally represented integers.</p>
 
                        </div>
