--- a/3100f23.html
+++ b/3100f23.html
@@ -155,6 +155,10 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/16</span><span class="course-task col-md-10"> Midterm #2.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/13</span><span class="course-task col-md-10"> Riemann's magic rearrangement theorem.
                                                     </span></li>
 
