--- a/research.html
+++ b/research.html
@@ -2684,7 +2684,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Distribution in coprime residue classes of polynomially-defined multiplicative functions</span>  <span class="paper-author">(w/ A. Singha Roy)</span>          </h4>
                         <p>
-                            <a href="https://www.springer.com/journal/209"><span class="journal-name">Math. Z.</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://www.springer.com/journal/209"><span class="journal-name">Math. Z.</span></a> 303 (<span class="paper-year">2023</span>), no. 4, paper 93, 20 pages</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/equidistributionredux.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/equidistributionredux-errata.pdf" target="_blank" class="btn btn--sm btn-pdf">Errata</a></div>
@@ -2729,7 +2729,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Intermediate prime factors in specified subsets</span>  <span class="paper-author">(w/ N. McNew and A. Singha Roy)</span>          </h4>
                         <p>
-                            <a href="https://www.springer.com/journal/605"><span class="journal-name">Monatshefte Math.</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://www.springer.com/journal/605"><span class="journal-name">Monatshefte Math.</span></a> 202 (<span class="paper-year">2023</span>), 837--855</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/intermediateprimes.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
