--- a/3100f23.html
+++ b/3100f23.html
@@ -156,6 +156,12 @@
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/20</span><span class="course-task col-md-10"> Examples of domains of convergence. The general form of the domain of convergence. A key lemma towards proving that general form.
+                                                    </span></li>
+                                                    
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/18</span><span class="course-task col-md-10"> Ratio test. Examples. Introduction to power series.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/16</span><span class="course-task col-md-10"> Midterm #2.
                                                     </span></li>
 
