--- a/3100f23.html
+++ b/3100f23.html
@@ -121,6 +121,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Textbook by Kenneth A. Ross: <i>Elementary Analysis</i>; may need to be on campus network to access</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="https://link.springer.com/book/10.1007/978-1-4614-6271-2" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 review sheet/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #5</span><span class="col-md-2 due-date">due 10/11</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -155,6 +159,9 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/23</span><span class="course-task col-md-10"> The general form of the domain of convergence. Introduction to continuity. Sequential criterion for continuity (start of &#167;17 in <a href="https://link.springer.com/book/10.1007/978-1-4614-6271-2">Ross's textbook</a>).
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/20</span><span class="course-task col-md-10"> Examples of domains of convergence. The general form of the domain of convergence. A key lemma towards proving that general form.
                                                     </span></li>
