--- a/3100f23.html
+++ b/3100f23.html
@@ -121,7 +121,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
-
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #6</span><span class="col-md-2 due-date">due 10/30</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Textbook by Kenneth A. Ross: <i>Elementary Analysis</i>; may need to be on campus network to access</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="https://link.springer.com/book/10.1007/978-1-4614-6271-2" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
