--- a/8440f23.html
+++ b/8440f23.html
@@ -126,6 +126,10 @@
                                             <div class="module-content col-sm-9">
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">10/25</span><span class="course-task col-md-10">
+                                                            Practical numbers (asymptotics), continued.
+                                                          </span></li>
+
                                                         <li class="with-bullet"><span class="course-date col-sm-1">10/23</span><span class="course-task col-md-10">
                                                             End of discussion of strong pseudoprimes. Introduction to the AKS primality test.
                                                           </span></li>
