--- a/3100f23.html
+++ b/3100f23.html
@@ -160,6 +160,8 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/25</span><span class="course-task col-md-10"> &#167;17 of Ross, continued. Proving functions are continuous from the definition. Applications of the sequential criterion. Continuity rules.
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/23</span><span class="course-task col-md-10"> The general form of the domain of convergence. Introduction to continuity. Sequential criterion for continuity (start of &#167;17 in <a href="https://link.springer.com/book/10.1007/978-1-4614-6271-2">Ross's textbook</a>).
                                                     </span></li>
