typo noted in paper

--- a/research.html
+++ b/research.html
@@ -2096,7 +2096,7 @@ abelian number field settings, respectively.
 
                                                             <a href="https://www.cambridge.org/core/journals/glasgow-mathematical-journal/latest-issue"> <span class="journal-name">Glasgow Math. J.</span></a> 62 (<span class="paper-year">2020</span>), 187--199</p>
                                                         </div>
-                                                        <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/brunmultiplicative3.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                                                        <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/brunmultiplicative3.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a><a href="http://pollack.uga.edu/errata-nonnegative.pdf" target="_blank" class="btn btn--sm btn-pdf">Errata</a></div>
                                                         <div class="paper-abstract col-md-12 col-xs-12">
                                                             <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper108" aria-expanded="false" aria-controls="paper108">Abstract</a>
                                                                 <div class="collapse" id="paper108">
@@ -2610,7 +2610,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                         <a href="https://www.journals.elsevier.com/journal-of-number-theory"><span class="journal-name">J. Number Theory</span></a>  239 (<span class="paper-year">2022</span>), 352--364</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/DSB.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-                    <div class="paper-abstract col-md-12 col-xs-12">
+                    <div class="paper-abs   tract col-md-12 col-xs-12">
                         <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper132" aria-expanded="false" aria-controls="paper132">Abstract</a>
                             <div class="collapse" id="paper132">
                                 <div class="well paper-abtract-content">
