--- a/3100f23.html
+++ b/3100f23.html
@@ -160,6 +160,9 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/30</span><span class="course-task col-md-10"> Continuity of $|f|$ and (more generally) continuity of compositions of functions. Polynomials and rational functions are continuous. The reach of a set of real number (closure within the extended real line). Statement of the general limit definition.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/25</span><span class="course-task col-md-10"> &#167;17 of Ross, continued. Proving functions are continuous from the definition. Applications of the sequential criterion. Continuity rules.
                                                     </span></li>
 
