--- a/3100f23.html
+++ b/3100f23.html
@@ -121,6 +121,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #7</span><span class="col-md-2 due-date">due 11/10</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #6</span><span class="col-md-2 due-date">due 10/30</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Textbook by Kenneth A. Ross: <i>Elementary Analysis</i>; may need to be on campus network to access</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="https://link.springer.com/book/10.1007/978-1-4614-6271-2" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -160,6 +162,10 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/3</span><span class="course-task col-md-10"> Definition of $\lim_{x\to a^{+}$, $\lim_{x\to a^{-}}$, $\lim_{x\to \pm  \infty}$. Examples. Functional limit rules.
+                                                    </span></li>
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/1</span><span class="course-task col-md-10"> Reminder of the general limit definition. Definition of $\lim_{x\to a} f(x) = L$, and examples.
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/30</span><span class="course-task col-md-10"> Continuity of $|f|$ and (more generally) continuity of compositions of functions. Polynomials and rational functions are continuous. The reach of a set of real number (closure within the extended real line). Statement of the general limit definition.
                                                     </span></li>
 
