--- a/8440f23.html
+++ b/8440f23.html
@@ -126,6 +126,14 @@
                                             <div class="module-content col-sm-9">
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">11/3</span><span class="course-task col-md-10">
+                                                            Practical number asymptotics, continued.
+                                                          </span></li>
+
+
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">11/1</span><span class="course-task col-md-10">
+                                                            AKS test, continued.
+                                                          </span></li>
 
                                                         <li class="with-bullet"><span class="course-date col-sm-1">10/30</span><span class="course-task col-md-10">
                                                             Schnirelmann's theorem, continued.
