--- a/8440f23.html
+++ b/8440f23.html
@@ -126,6 +126,10 @@
                                             <div class="module-content col-sm-9">
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">11/6</span><span class="course-task col-md-10">
+                                                            Conclusion of the proof of the Goldbach--Schnirelmann theorem. Overview of Romanov's theorem.
+                                                          </span></li>
+
                                                         <li class="with-bullet"><span class="course-date col-sm-1">11/3</span><span class="course-task col-md-10">
                                                             Practical number asymptotics, continued.
                                                           </span></li>
