--- a/3100f23.html
+++ b/3100f23.html
@@ -165,7 +165,7 @@
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/6</span><span class="course-task col-md-10"> Statement of the limit definition with $\epsilon$s and $\delta$s. Introduction to derivatives. Basic examples. Statement of limit rules.
                                                     </span></li>
 
-                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/3</span><span class="course-task col-md-10"> Definition of $\lim_{x\to a^{+}$, $\lim_{x\to a^{-}}$, $\lim_{x\to \pm  \infty}$. Examples. Functional limit rules.
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/3</span><span class="course-task col-md-10"> Definition of $\lim_{x\to a^{+}}$, $\lim_{x\to a^{-}}$, $\lim_{x\to \pm  \infty}$. Examples. Functional limit rules.
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/1</span><span class="course-task col-md-10"> Reminder of the general limit definition. Definition of $\lim_{x\to a} f(x) = L$, and examples.
                                                     </span></li>
