--- a/3100f23.html
+++ b/3100f23.html
@@ -163,6 +163,9 @@
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/10</span><span class="course-task col-md-10"> Derivatives are 0 at local maximums or local minimums. Rolle's theorem. The mean value theorem. Derivative zero implies constant.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/8</span><span class="course-task col-md-10"> Proofs of limit rules, including the chain rule.
                                                     </span></li>
 
