--- a/3100f23.html
+++ b/3100f23.html
@@ -162,6 +162,8 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/13</span><span class="course-task col-md-10"> If $f'=g'$ on an open interval, then $f= g + C$ on that interval. Manipulating power series: geometric series.
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/10</span><span class="course-task col-md-10"> Derivatives are 0 at local maximums or local minimums. Rolle's theorem. The mean value theorem. Derivative zero implies constant.
                                                     </span></li>
