--- a/3100f23.html
+++ b/3100f23.html
@@ -164,6 +164,9 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/15</span><span class="course-task col-md-10">Differentiating and integrating power series (no proofs).
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/13</span><span class="course-task col-md-10"> If $f'=g'$ on an open interval, then $f= g + C$ on that interval. Manipulating power series: geometric series.
                                                     </span></li>
 
