--- a/8440f23.html
+++ b/8440f23.html
@@ -126,6 +126,8 @@
                                             <div class="module-content col-sm-9">
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">11/15</span><span class="course-task col-md-10">Crandall's anti-Collatz conjecture and the                   Pomerance--Franco theorem.
+                                                          </span></li>
 
                                                         <li class="with-bullet"><span class="course-date col-sm-1">11/13</span><span class="course-task col-md-10">
                                                             Everett's theorem on Collatz's conjecture.
