--- a/3100f23.html
+++ b/3100f23.html
@@ -121,6 +121,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+                                                    
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #3 review sheet/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/exam3review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #7</span><span class="col-md-2 due-date">due 11/10</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -164,6 +165,13 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/27</span><span class="course-task col-md-10">Taylor polynomials. Statement of Taylor's theorem and proof when $n=0$.
+                                                    </span></li>
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/20</span><span class="course-task col-md-10">Exam #3.
+                                                    </span></li>
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/17</span><span class="course-task col-md-10">The Taylor series of $f$ as the only ``candidate'' series to represent $f$ near $0$.
+                                                    </span></li>
+                                                    
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/15</span><span class="course-task col-md-10">Differentiating and integrating power series (no proofs).
                                                     </span></li>
 
