--- a/8440f23.html
+++ b/8440f23.html
@@ -126,6 +126,9 @@
                                             <div class="module-content col-sm-9">
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">11/29</span><span class="course-task col-md-10">Practical numbers, ctd.                                </span></li>
+
                                                         <li class="with-bullet"><span class="course-date col-sm-1">11/20</span><span class="course-task col-md-10">Everett's theorem, continued.                                                        </span></li>
 
 
