--- a/3100f23.html
+++ b/3100f23.html
@@ -165,6 +165,10 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">12/1</span><span class="course-task col-md-10">Statement and proof of the general Taylor theorem. Proof that $\ln 2 = 1-1/2+1/3-1/4+\dots$.
+                                                    </span></li>
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/29</span><span class="course-task col-md-10">Applications of Taylor. Proof of Taylor's theorem when $n=1$.
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/27</span><span class="course-task col-md-10">Taylor polynomials. Statement of Taylor's theorem and proof when $n=0$.
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/20</span><span class="course-task col-md-10">Exam #3.
