--- a/3100f23.html
+++ b/3100f23.html
@@ -165,6 +165,10 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">12/4</span><span class="course-task col-md-10">Proofs that $\sin x, \cos x$, and $e^x$ are represented by their Taylor series for all real numbers $x$.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">12/1</span><span class="course-task col-md-10">Statement and proof of the general Taylor theorem. Proof that $\ln 2 = 1-1/2+1/3-1/4+\dots$.
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/29</span><span class="course-task col-md-10">Applications of Taylor. Proof of Taylor's theorem when $n=1$.
