--- a/8440f23.html
+++ b/8440f23.html
@@ -127,6 +127,10 @@
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
 
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">12/4</span><span class="course-task col-md-10">Practical numbers, conclusion.</span></li>
+
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">12/1</span><span class="course-task col-md-10">Applications of Maynard--Tao.                   </span></li>
+
                                                         <li class="with-bullet"><span class="course-date col-sm-1">11/29</span><span class="course-task col-md-10">Practical numbers, ctd.                                </span></li>
 
                                                         <li class="with-bullet"><span class="course-date col-sm-1">11/20</span><span class="course-task col-md-10">Everett's theorem, continued.                                                        </span></li>
