--- a/3100f23.html
+++ b/3100f23.html
@@ -121,7 +121,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
-                                                    
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Final exam sheet/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/finalreview.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #3 review sheet/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/exam3review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #7</span><span class="col-md-2 due-date">due 11/10</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -165,6 +166,8 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">12/5</span><span class="course-task col-md-10">Power series and Taylor series with an arbitrary center.
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">12/4</span><span class="course-task col-md-10">Proofs that $\sin x, \cos x$, and $e^x$ are represented by their Taylor series for all real numbers $x$.
                                                     </span></li>
