--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
                                   <ul>
-                                              <li><a href="3100f23.html">MATH 3100</a></li>
-                                         <li><a href="8440f23.html">MATH 8440</a></li>
+                                              <li><a href="3100s24.html">MATH 3100</a></li>
+                                         <li><a href="4000s24.html">MATH 4000</a></li>
                                             </ul>
                                     </li>
                                 </ul>
@@ -138,12 +138,12 @@
                                         </div>
                                         <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
-                                                <h6>Teaching (Fall 2023)</h6>
+                                                <h6>Teaching (Spring 2024)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul>
-                                                    <li><a href="3100f23.html">MATH 3100</a>: Sequences and Series
-													<li><a href="8440f23.html">MATH 8440</a>: Topics in Multiplicative Number Theory  (reading/seminar course)</li>
+                                                    <li><a href="3100s24.html">MATH 3100</a>: Sequences and Series
+													<li><a href="4000s24.html">MATH 4000</a>: Modern Algebra</li>
                                                   </ul>
                                             </div>
                                         </div>
