--- a/research.html
+++ b/research.html
@@ -69,8 +69,8 @@
                                                 <i class="pp-icon-doc icon icon--lg"></i> Courses
                                             </a>
                                             <ul>
-                                              <li><a href="3100f23.html">MATH 3100</a></li>
-                                              <li><a href="8440f23.html">MATH 8440</a></li>
+                                              <li><a href="3100s24.html">MATH 3100</a></li>
+                                              <li><a href="4000s24.html">MATH 4000</a></li>
                                             </ul>
                                         </li>
 
