--- a/research.html
+++ b/research.html
@@ -2749,7 +2749,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Two problems on the distribution of Carmichael's lambda function</span>  <span class="paper-author"></span>          </h4>
                         <p>
-                            <a href="https://londmathsoc.onlinelibrary.wiley.com/journal/20417942"><span class="journal-name">Mathematika</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://londmathsoc.onlinelibrary.wiley.com/journal/20417942"><span class="journal-name">Mathematika</span></a> 69 (<span class="paper-year">2023</span>), 1195--1220 </p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/lambdadist3.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
@@ -2768,7 +2768,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Densities of integer sets represented by quadratic forms</span>  <span class="paper-author">(w/ P.L. Clark, J. Rouse, and K. Thompson)</span>          </h4>
                         <p>
-                            <a href="https://www.sciencedirect.com/journal/journal-of-number-theory/issues"><span class="journal-name">J. Number Theory</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://www.sciencedirect.com/journal/journal-of-number-theory/issues"><span class="journal-name">J. Number Theory</span></a> 256 (<span class="paper-year">2024</span>), 290--328</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/CPRT.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
