--- a/4000s24.html
+++ b/4000s24.html
@@ -190,8 +190,8 @@
                                                     </li>
                                                   
                                                 </ul>
-                                                
-                                                <p>We will aim to cover Chapters 1--4 of Shifrin's text and to start Chapter 5. This corresponds roughly to Chapters 1--6 and some of Chapter 11 in Hungerford's book. For further adventures in Algebra-land, I encourage you to take MATH 4010.</p>
+                                                <p>Topics to be covered include integers and unique factorization, modular arithmetic, analogues of these for polynomials over fields, homomorphisms and quotient rings, and field extensions. </p>
+                                                <p>We will aim to cover Chapters 1--4 of Shifrin's text and to start Chapter 5 (integers, modular arithmetic, analogues for polynomials over fields, homomorphisms and quotient rings, and field extensions). This corresponds roughly to Chapters 1--6 and some of Chapter 11 in Hungerford's book. For further adventures in Algebra-land, I encourage you to take MATH 4010.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -209,7 +209,7 @@
                                                 <p>There will be three fifty-minute <strong>in-class</strong> exams, as well as a final exam.
                                                     <ul>
                                                     <li class="with-bullet">Midterm #1: Friday, Feb. 16</li>
-                                                    <li class="with-bullet">Midterm #2: Friday, March 29</li>
+                                                    <li class="with-bullet">Midterm #2: Wednesday, March 27</li>
                                                     <li class="with-bullet">Midterm #3: Friday, April 19</li>
                                                         <li class="with-bullet">Final exam: Friday, May 3
                                                             12:00 - 3:00 PM (location TBA)</li>
