--- a/research.html
+++ b/research.html
@@ -2806,6 +2806,28 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     </div>
                 </li> 
 
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Half-factorial real quadratic orders</span>  <span class="paper-author"></span>          </h4>
+                        <p>
+                            <a href="https://link.springer.com/journal/13/volumes-and-issues"><span class="journal-name">Arch. Math. (Basel)</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD-Artin.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper142" aria-expanded="false" aria-controls="paper142">Abstract</a>
+                            <div class="collapse" id="paper142">
+                                <div class="well paper-abtract-content">
+                                    <p>  Recall that $D$ is a <i>half-factorial domain</i> (HFD) when $D$ is atomic and every equation
+                                        $\pi_1\cdots \pi_k = \rho_1 \cdots\rho_\ell$,
+                                        with all $\pi_i$ and $\rho_j$ irreducible in $D$, implies $k=\ell$. We explain how techniques introduced to attack Artin's primitive root conjecture can be applied to understand half-factoriality of orders in real quadratic number fields. In particular, we prove that (a) there are infinitely many real quadratic orders that are half-factorial domains, and (b) under the Generalized Riemann Hypothesis, $\mathbb{Q}(\sqrt{2})$ contains infinitely many HFD orders.</p>
+
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
+
+
 
 
 
@@ -2839,14 +2861,6 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
 
 <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
-        <h4> <span class="paper-title">Half-factorial real quadratic orders</span>
-        <span class="paper-author"></span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD-Artin.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>         
-
-<li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
         <h4> <span class="paper-title">Mean values of multiplicative functions and applications to residue-class distribution</span>
         <span class="paper-author">(w/ A. Singha Roy)</span></h4>
     </div>
@@ -2855,6 +2869,14 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
 
 
 
+
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">Maximally elastic quadratic fields</span>
+        <span class="paper-author"></span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/maximallyelastic.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>         
 
 
 </ul>
