--- a/3100s24.html
+++ b/3100s24.html
@@ -183,7 +183,7 @@
                                                         </div>
                                                     </li>
                                                     </ul>
-                                                    <p>Our primary resource will be the MATH 3100 course notes developed by UGA Professor Emeritus <a href="http://www.math.uga.edu/directory/malcolm-r-adams">Malcolm Adams</a>. You may <a href="https://outlookuga-my.sharepoint.com/personal/mradams_uga_edu/_layouts/15/guestaccess.aspx?guestaccesstoken=RPAsP689jnrYQyVCytrTzO1xgwQjZtIszdbtLDqudFc%3d&docid=02afcc70f744845c680c272c745249f65">download the notes</a> from his website. These notes were written with this course in mind and we will follow them closely for the first two-thirds of the course. The Ross book listed above will be a resource for the final third of the course; you can access it for free as a UGA student.</p>
+                                                    <p>Our primary resource will be the MATH 3100 course notes developed by UGA Professor Emeritus <a href="http://www.math.uga.edu/directory/malcolm-r-adams">Malcolm Adams</a>. You may <a href="https://pollack.uga.edu/3100s24/SANDS13.pdf">download the notes</a> here. These notes were written with this course in mind and we will follow them closely for the first two-thirds of the course. The Ross book listed above will be a resource for the final third of the course; you can access it for free as a UGA student.</p>
                                             </div>
                                         </div>
                                         <div class="module-block row">
