--- a/3100s24.html
+++ b/3100s24.html
@@ -105,7 +105,9 @@
                                                 </div>
                                                 <div class="office-hours"><p>
                                                      <strong>Office hours:</strong><br>
-                                                    TBA
+                                                    Monday, 3-5 PM<br>
+                                                    Wednesday, 3-4 PM<br>
+                                                    Friday, 3-4 PM
                                                     </div>
                                                 <div class="course-notice">This page is an online copy of the syllabus. The web page will occasionally be updated with additional course materials.</div>
                                             </div>
@@ -131,7 +133,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
-                                                    
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/19</span><span class="course-task col-md-10">Bounded above, bounded below, and bounded. Reformulation of bounded: There is a real number $M\ge 0$ with $-M \le a_n \le M$ for all natural numbers $n$. Definition of subsequence. Examples. Subsequences of increasing sequences are increasing.
+
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/17</span><span class="course-task col-md-10">Sequences as functions. The graph of a sequence. Increasing and decreasing sequences. $\{a_n\}$ increasing implies $a_n \le a_m$ whenever $n\le m$. Definitions of bounded above and below.</span></li>
                                                     
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/12</span><span class="course-task col-md-10">Induction with a different base case. Strong induction (complete induction).</span></li>
