--- a/4000s24.html
+++ b/4000s24.html
@@ -104,7 +104,9 @@
                                                 </div>
                                                 <div class="office">
                                                     <strong>Office hours:</strong><br>
-                                                TBA
+                                                    Monday, 3-5 PM<br>
+                                                    Wednesday, 3-4 PM<br>
+                                                    Friday, 3-4 PM
                                                 </div>
                                                 <div class="course-notice">This page is a copy of the syllabus. The web page will occasionally be updated with additional course materials.</div>
                                             </div>
@@ -131,6 +133,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/19</span><span class="course-task col-md-10"> Proof of the division algorithm. Definition of $d\mid n$, along with examples and basic properties. Definition of $\gcd$ and Euclid's magic gcd algorithm. Euclid's algorithm stops. </span></li>  
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/17</span><span class="course-task col-md-10"> Exponentiation. Pascal's triangle and the binomial theorem. Statement of Division algorithm. </span></li>    
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/12</span><span class="course-task col-md-10"> More deductions from the fundamental properties: $a(-1)=-a$ and $(-1)a=-a$, rules for inequalities, $1$ is the least positive integer. Principle of Mathematical Induction as a consequence of WOP.</span></li>
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10"> Fundamental Properties of $\mathbb{Z}$, continued. Proofs that $-(-a)=a$ and $a \cdot 0 = 0$.</span></li>
