--- a/3100s24.html
+++ b/3100s24.html
@@ -133,6 +133,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/22</span><span class="course-task col-md-10">Eventually increasing. The sum of two eventually increasing sequences is eventually increasing. Motivating the definition of convergence.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/19</span><span class="course-task col-md-10">Bounded above, bounded below, and bounded. Reformulation of bounded: There is a real number $M\ge 0$ with $-M \le a_n \le M$ for all natural numbers $n$. Definition of subsequence. Examples. Subsequences of increasing sequences are increasing.
 
                                                     </span></li>
