--- a/4000s24.html
+++ b/4000s24.html
@@ -118,7 +118,10 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                     
-                                                  <ul class="course-summary-to-date">   <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/22</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                  <ul class="course-summary-to-date"> 
+ <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #2</span><span class="col-md-2 due-date">due 1/31</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                  </li>
+												  <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/22</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                   </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">$\mathbb{Z}$ axioms handout</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/integers.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
